--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-leaflet": "^4.2.1",
     "react-loader-spinner": "^6.1.0",
     "react-redux": "8.1.1",
-    "react-router-dom": "6.14.0"
+    "react-router-dom": "6.21.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@jedmao/redux-mock-store": "3.0.5",
